--- a/chrome_extension/views/login.html
+++ b/chrome_extension/views/login.html
@@ -1,7 +1,7 @@
 <chanters-login>
     <template>
         <link rel="stylesheet" type="text/css" href="style/login.css">
-        <div class="container-fluid child-container">
+        <div class="container-fluid child-container" style="display: {{display}}">
             <div class="login-wrap border light-div box-shadow-inset">
                 <div class="dark-div btm-border">
                     <button class="form-text btn-login txt-shadow" on-click="{{goToPlayer}}" style="pointer:cursor">
@@ -9,10 +9,10 @@
                     </button>
                 </div>
                 <div class="form-wrap btm-border">
-                    <input type="text" autofocus class="form-text email txt-shadow" placeholder="Email address">
+                    <input type="email" value="{{email}}" autofocus class="form-text email txt-shadow" placeholder="Email address">
                 </div>
                 <div class="form-wrap">
-                    <input type="text" placeholder="Password" class="form-text password txt-shadow">
+                    <input type="text" value="{{userName}}" placeholder="User Name" class="form-text password txt-shadow">
                 </div>
             </div>
         </div>
