--- a/chrome_extension/style/player.css
+++ b/chrome_extension/style/player.css
@@ -1,209 +1,145 @@
   chanters-player {
-            position: fixed;
-            left: 0px;
-            top: 0px;
-            background-color: rgba(0, 0, 0, 0.5);
-            width: 18%;
-            z-index: 99;
-            display: none;
-            height: 0%;
-            transition: all 2s ease-in-out;
-            border-left: 1px solid rgba(255, 255, 255, 0.15);
-            box-shadow: inset -2px 0px 3px 2px rgba(0, 0, 0, 0.3);
-        }
-        
-        canvas {
-            position: fixed;
-            bottom: 0px;
-            height: 110%;
-            width: 100%;
-            z-index: -1;
-            top: 40px;
-            display: none;
-        }
-        
-        #welcome {
-            position: fixed;
-            height: 100%;
-            width: 100%;
-            text-align: center;
-            top: 200px;
-            color: red;
-            font-size: 280%;
-            text-transform: capitalize;
-            text-shadow: 0px 1px 0px #D41919, 1px 5px 0px rgba(0, 0, 0, 0.25);
-        }
-        
-        #title {
-            padding: 12px 14px;
-            margin: 0;
-            border: none;
-            display: none;
-            border-radius: 0px;
-            width: 92%;
-        }
-        
-        input {
-            position: fixed;
-            display: none;
-            margin-left: 46%;
-            top: 300px;
-        }
-        
-        #songList {
-            display: none;
-            position: fixed;
-            height: 100%;
-            width: 18%;
-            /*overflow-y: scroll;
+      position: fixed;
+      left: 0px;
+      top: 0px;
+      background-color: rgba(0, 0, 0, 0.5);
+      width: 18%;
+      z-index: 99;
+      display: none;
+      height: 0%;
+      transition: all 2s ease-in-out;
+      border-left: 1px solid rgba(255, 255, 255, 0.15);
+      box-shadow: inset -2px 0px 3px 2px rgba(0, 0, 0, 0.3);
+  }
+  
+  canvas {
+      position: fixed;
+      bottom: 0px;
+      height: 110%;
+      width: 100%;
+      z-index: -1;
+      top: 45px;
+      display: none;
+  }
+  
+  #welcome {
+      position: fixed;
+      height: 100%;
+      width: 100%;
+      text-align: center;
+      top: 200px;
+      color: red;
+      font-size: 280%;
+      text-transform: capitalize;
+      text-shadow: 0px 1px 0px #D41919, 1px 5px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  #title {
+      padding: 12px 14px;
+      margin: 0;
+      border: none;
+      display: none;
+      border-radius: 0px;
+      position: relative;
+      font-weight: 600;
+      text-shadow: 0px 1px 0px #D41919, 1px 2px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  #fileUpload {
+      display: none;
+  }
+  
+  #songList {
+      display: none;
+      position: fixed;
+      height: 100%;
+      width: 18%;
+      /*overflow-y: scroll;
             overflow-x: hidden;*/
-            overflow: hidden;
-            transition: all 500s ease-in-out;
-        }
-        
-        #songList li {
-            border-bottom: 1px dotted #DDD;
-            transition: all 2s ease-in-out;
-            position: relative;
-            display: block;
-            opacity: 0;
-        }
-        
-        #songList li a {
-            display: block;
-            cursor: pointer;
-            /*padding-top: 10px;
+      overflow: hidden;
+      transition: all 500s ease-in-out;
+  }
+  
+  #songList li {
+      border-bottom: 1px dotted #DDD;
+      transition: all 2s ease-in-out;
+      position: relative;
+      display: block;
+      opacity: 0;
+  }
+  
+  #songList li a {
+      display: block;
+      cursor: pointer;
+      /*padding-top: 10px;
             padding-left: 17px;*/
-            padding: 10px;
-            height: inherit;
-            transition: all 500s ease-in-out;
-        }
-        
-        a:hover {
-            padding-left: 20px;
-            background-color: rgba(0, 0, 0, 0.3);
-        }
-        
-        #songList li:after,
-        #songList li:before {
-            clear: both;
-        }
-        
-        audio {
-            display: none;
-        }
-        
-        input[type=range] {
-            -webkit-appearance: none;
-            margin: 10px 0;
-            width: 100%;
-            background-color: transparent;
-        }
-        
-        input[type=range]:focus {
-            outline: none;
-        }
-        
-        input[type=range]::-webkit-slider-runnable-track {
-            width: 100%;
-            height: 8.8px;
-            cursor: pointer;
-            animate: 0.2s;
-            box-shadow: inset 0 2px 8px rgba(0, 0, 0, .7);
-            background: #ac51b5;
-            border-radius: 25px;
-            border: 0px solid #000101;
-        }
-        
-        input[type=range]::-webkit-slider-thumb {
-            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-            border: 0px solid #000000;
-            height: 10px;
-            width: 10px;
-            border-radius: 7px;
-            background: #65001c;
-            cursor: pointer;
-            -webkit-appearance: none;
-            margin-top: -1.6px;
-            box-shadow: 0 3px 8px rgba(0, 0, 0, .7);
-        }
-        
-        input[type=range]:focus::-webkit-slider-runnable-track {
-            background: #ac51b5;
-        }
-        
-        input[type=range]::-moz-range-track {
-            width: 100%;
-            height: 12.8px;
-            cursor: pointer;
-            animate: 0.2s;
-            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-            background: #ac51b5;
-            border-radius: 25px;
-            border: 0px solid #000101;
-        }
-        
-        input[type=range]::-moz-range-thumb {
-            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-            border: 0px solid #000000;
-            height: 20px;
-            width: 20px;
-            border-radius: 7px;
-            background: #65001c;
-            cursor: pointer;
-        }
-        
-        input[type=range]::-ms-track {
-            width: 100%;
-            height: 12.8px;
-            cursor: pointer;
-            animate: 0.2s;
-            background: transparent;
-            border-color: transparent;
-            border-width: 39px 0;
-            color: transparent;
-        }
-        
-        input[type=range]::-ms-fill-lower {
-            background: #ac51b5;
-            border: 0px solid #000101;
-            border-radius: 50px;
-            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-        }
-        
-        input[type=range]::-ms-fill-upper {
-            background: #ac51b5;
-            border: 0px solid #000101;
-            border-radius: 50px;
-            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-        }
-        
-        input[type=range]::-ms-thumb {
-            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-            border: 0px solid #000000;
-            height: 20px;
-            width: 20px;
-            border-radius: 7px;
-            background: #65001c;
-            cursor: pointer;
-        }
-        
-        input[type=range]:focus::-ms-fill-lower {
-            background: #ac51b5;
-        }
-        
-        input[type=range]:focus::-ms-fill-upper {
-            background: #ac51b5;
-        }
-        
-        #videoPlayer {
-            height: 97%;
-            width: 85%;
-            left: 15%;
-            position: fixed;
-            z-index: 999999;
-            background-color: rgba(0, 0, 0, 0.9);
-            display: none;
-            opacity: 0;
-            transition: all 1s ease-in;
-        }
+      padding: 10px;
+      height: inherit;
+      transition: all 500s ease-in-out;
+  }
+  
+  a:hover {
+      padding-left: 20px;
+      background-color: rgba(0, 0, 0, 0.3);
+  }
+  
+  #songList li:after,
+  #songList li:before {
+      clear: both;
+  }
+  
+  audio {
+      display: none;
+  }
+  
+  input[type=range] {
+      -webkit-appearance: none;
+      margin: 10px 0;
+      width: 100%;
+      background-color: transparent;
+  }
+  
+  input[type=range]:focus {
+      outline: none;
+  }
+  
+  input[type=range]::-webkit-slider-runnable-track {
+      width: 100%;
+      height: 8.8px;
+      cursor: pointer;
+      animate: 0.2s;
+      box-shadow: inset 0 2px 8px rgba(0, 0, 0, .7);
+      background: red;
+      border-radius: 25px;
+  }
+  
+  input[type=range]::-webkit-slider-thumb {
+      box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+      border: 0px solid #000000;
+      height: 10px;
+      width: 10px;
+      border-radius: 7px;
+      background: red;
+      cursor: pointer;
+      -webkit-appearance: none;
+      margin-top: -1.6px;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, .7);
+  }
+  
+  input[type=range]:focus::-webkit-slider-runnable-track {
+      background: red;
+  }
+  
+  #videoPlayer {
+      height: 95%;
+      width: 82%;
+      left: 18%;
+      position: fixed;
+      z-index: 999999;
+      background-color: rgba(0, 0, 0, 0.9);
+      transition: all 1s ease-in;
+  }
+  
+  .border-right-red {
+      border-right: 4px solid red;
+  }
